--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Alexander B. Kinney"
-  avatar           : "IMG_2091.jpg"
+  avatar           : "profile.png"
   bio              : "PhD Candidate, School of Sociology, The University of Arizona"
   location         : "Tucson, AZ"
   employer         :
