--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Alexander B. Kinney"
 title_separator          : "-"
 name                     : &name "Alexander B. Kinney"
 description              : &description "PhD Candidate, School of Sociology, The University of Arizona"
-url                      : https://alexanderkinney.com # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://abk5074.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "abk5074/abk5074.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
