--- a/_config.yml
+++ b/_config.yml
@@ -75,7 +75,7 @@ social:
 analytics:
   provider               :  "google-universal" # false (default), "google", "google-universal", "custom"
   google:
-    tracking_id          :  '266851471'
+    tracking_id          :  'G-ZE8HH4C1BK'
 
 
 # Site Author
@@ -100,7 +100,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         :
+  linkedin         : "https://www.linkedin.com/in/alex-kinney-187642139/"
   orcid            : "https://orcid.org/0000-0003-2916-1791"
   pinterest        :
   soundcloud       :
