--- a/_config.yml
+++ b/_config.yml
@@ -75,7 +75,7 @@ social:
 analytics:
   provider               :  "google-universal" # false (default), "google", "google-universal", "custom"
   google:
-    tracking_id          :  '2393043774'
+    tracking_id          :  'G-BW672WW2PM'
 
 
 # Site Author
