--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Alexander B. Kinney PhD"
+title                    : "Alexander B. Kinney Ph.D."
 title_separator          : "-"
 name                     : &name "Alexander B. Kinney"
 description              : &description "Assistant Professor, Department of Criminal Justice and Criminology, Sam Houston State University"
