--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Alexander B. Kinney Ph.D."
 title_separator          : "-"
 name                     : &name "Alexander B. Kinney"
 description              : &description "Assistant Professor, Department of Criminal Justice and Criminology, Sam Houston State University"
-url                      : www.alexanderkinney.com # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "www.alexanderkinney.com" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "abk5074/abk5074.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
