--- a/_config.yml
+++ b/_config.yml
@@ -81,12 +81,12 @@ analytics:
 # Site Author
 author:
   name             : "Alexander B. Kinney Ph.D."
-  avatar           : "professional.jpeg"
-  bio              : "Assistant Professor, Department of Criminal Justice and Criminology, Sam Houston State University"
-  location         : "Huntsville, TX"
+  avatar           : "Professional_retouched.TIFF"
+  bio              : "Assistant Professor of Sociology, Oberlin College"
+  location         : "Oberlin, OH"
   employer         :
   googlescholar    : "https://scholar.google.com/citations?user=XTYA3TUAAAAJ&hl=en&authuser=1"
-  email            : "abk017@shsu.edu"
+  email            : "akinney1@oberlin.edu"
   researchgate     : "https://www.researchgate.net/profile/Alexander-Kinney"
   uri              :
   bitbucket        :
