--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Alexander B. Kinney Ph.D."
 title_separator          : "-"
 name                     : &name "Alexander B. Kinney"
-description              : &description "Assistant Professor, Department of Criminal Justice and Criminology, Sam Houston State University"
+description              : &description "Assistant Professor of Sociology, Oberlin College"
 url                      : https://abk5074.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "abk5074/abk5074.github.io"
